--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,488 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap");
+
+html {
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: hsl(218, 28%, 13%);
+    margin: 0;
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #ffffff;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+/* ----- COMMON RULES ----- */
+
+h1 {
+    font-size: 2rem;
+    line-height: 2.25rem;
+    font-family: Raleway;
+}
+
+h2 {
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+    font-family: Raleway;
+}
+
+h1,
+h2,
+p {
+    margin: 0;
+}
+
+/* ----- HEADER ----- */
+
+.header {
+    background-color: hsl(217, 28%, 15%);
+    height: 5rem;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3rem 4rem;
+    box-sizing: border-box;
+}
+
+.header-logo {
+    width: 10.75rem;
+}
+
+.header-topnav {
+    width: 35%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.header-topnav span {
+    font-family: Raleway;
+}
+
+.header-topnav span:hover {
+    font-weight: 700;
+    cursor: pointer;
+}
+
+/* ----- HOME ----- */
+
+section {
+    width: 100vw;
+}
+
+/* 1st section */
+.intro {
+    background-color: hsl(217, 28%, 15%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60rem;
+}
+
+.intro-bg-image {
+    background-image: url("./assets/images/bg-curvy-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 100%;
+}
+
+.intro img {
+    height: 28rem;
+    margin-bottom: 2rem;
+}
+
+.intro-text h1 {
+    margin: 2rem;
+}
+
+.intro-text p {
+    margin-bottom: 4rem;
+}
+
+.intro-text p,
+.intro-text h1 {
+    text-align: center;
+}
+
+.btn-intro,
+.btn-get-started {
+    outline: none;
+    border: none;
+    font-family: inherit;
+    font-weight: 700;
+    color: #ffffff;
+    background-color: hsl(198, 60%, 50%);
+    height: 3rem;
+    width: 15rem;
+    border-radius: 2rem;
+    cursor: pointer;
+}
+
+.btn-intro:hover,
+.btn-get-started:hover {
+    background-color: hsl(176, 68%, 64%);
+}
+
+/* 2nd section */
+.grid-info-wrap {
+    padding: 0 16rem;
+    box-sizing: border-box;
+}
+
+.grid-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 5rem 2rem;
+}
+
+.grid-info-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.grid-info-card img {
+    height: 6rem;
+    margin-bottom: 2.25rem;
+}
+
+.grid-info-card h2 {
+    margin-bottom: 1.25rem;
+}
+
+.grid-info-card h2,
+.grid-info-card p {
+    text-align: center;
+}
+
+.grid-info-card p {
+    max-width: 23rem;
+}
+
+/* 3rd section */
+.description-wrap {
+    padding: 7rem 5rem;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.description-wrap img {
+    height: 28rem;
+    margin-right: 4rem;
+}
+
+.description {
+    margin-top: 5.5rem;
+}
+
+.description h1 {
+    margin-bottom: 2rem;
+}
+
+.description > p {
+    max-width: 35.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.how-it-works {
+    max-width: 11.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.how-it-works p {
+    color: hsl(176, 68%, 64%);
+    margin-right: 1rem;
+}
+
+.how-it-works:hover {
+    border-bottom: hsl(176, 68%, 64%) solid 1.5px;
+}
+
+.grid-review-wrap {
+    padding: 0 5rem;
+    box-sizing: border-box;
+    margin-bottom: 16rem;
+}
+
+.grid-review {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    gap: 0 2.5rem;
+}
+
+.grid-review-card {
+    background-color: hsl(219, 30%, 18%);
+    padding: 2.25rem 1.25rem;
+    box-sizing: border-box;
+    border-radius: 2px;
+}
+
+.grid-review-card p {
+    margin-bottom: 2.25rem;
+}
+
+.profile-info {
+    display: flex;
+    flex-direction: row;
+}
+
+.profile-info img {
+    width: 2.25rem;
+    height: 2.25rem;
+    border-radius: 50%;
+    margin-right: 0.6rem;
+}
+
+.profile-bio {
+    display: flex;
+    flex-direction: column;
+}
+
+.profile-name {
+    font-size: 0.8rem;
+    font-weight: 700;
+}
+
+.profile-position {
+    font-size: 0.6rem;
+}
+
+/* ----- FOOTER ----- */
+
+.footer-info-small-screen {
+    display: none;
+}
+
+.footer {
+    width: 100vw;
+    position: relative;
+    background-color: hsl(216, 53%, 9%);
+    padding: 0 7rem;
+    box-sizing: border-box;
+}
+
+.footer-logo {
+    margin-top: 12rem;
+    width: 8rem;
+}
+
+.footer-form-wrap {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-form {
+    position: absolute;
+    background-color: hsl(217, 28%, 15%);
+    padding: 2rem 4rem;
+    box-sizing: border-box;
+    border-radius: 2px;
+    margin: -8.5rem;
+}
+
+.footer-form h1,
+.footer-form p {
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.input-wrap {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.input {
+    width: 60%;
+    height: 3rem;
+    border-radius: 2rem;
+    padding: 0.9rem 1.5rem;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background-color: #ffffff;
+}
+
+.warning-message {
+    margin-top: 0.7rem;
+    margin-left: 1.5rem;
+    font-size: 0.7rem;
+    color: hsl(0, 100%, 63%);
+    font-weight: 700;
+}
+
+.grid-footer-wrap {
+    padding: 2rem 0;
+}
+
+.grid-footer {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 1fr;
+    gap: 0;
+}
+
+.icon-style {
+    color: #ffffff;
+    margin-right: 1rem;
+}
+
+.icon-social-hover:hover {
+    color: hsl(176, 68%, 64%);
+    cursor: pointer;
+    transition: 0.4;
+}
+
+.grid-footer-contact div:last-child {
+    margin-top: 1.5rem;
+}
+
+.grid-footer-info p:not(:last-child) {
+    margin-bottom: 1.5rem;
+}
+
+.grid-footer-info p:hover {
+    font-weight: 700;
+    cursor: pointer;
+}
+
+/* ----- RESPONSIVE ----- */
+
+/* xxsmal screen  */
+@media only screen and (max-width: 375px) {
+    html {
+        font-size: 0.7rem;
+    }
+
+    /* header */
+    .header {
+        padding: 3rem 2rem;
+    }
+
+    .header-topnav {
+        width: 45%;
+    }
+
+    /* homme - 1st section */
+    .intro img {
+        height: 20rem;
+    }
+
+    /* home - 2nd section */
+    .grid-info-wrap {
+        padding: 0 5rem;
+    }
+
+    .grid-info {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        gap: 4rem 0;
+    }
+
+    /* home - 3rd section */
+    .description-wrap {
+        padding: 7rem 5rem;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .description-wrap img {
+        height: 20rem;
+        margin-right: 0;
+    }
+
+    .description {
+        margin-top: 5rem;
+    }
+
+    .grid-review-wrap {
+        margin-bottom: 22rem;
+    }
+
+    .grid-review {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        gap: 2.5rem 0;
+    }
+
+    /* footer */
+    .footer {
+        padding: 0 3rem;
+    }
+
+    .footer-form {
+        max-width: 28rem;
+        margin: -15rem;
+    }
+
+    .input-wrap {
+        flex-direction: column;
+    }
+
+    .input {
+        width: 100%;
+    }
+
+    .btn-get-started {
+        margin-top: 2rem;
+        width: 100%;
+    }
+
+    .footer-logo {
+        margin-top: 18rem;
+    }
+
+    .grid-footer {
+        display: none;
+    }
+
+    .footer-info-small-screen {
+        display: block;
+    }
+
+    .small-screen-conract div {
+        margin-bottom: 1rem;
+    }
+
+    .small-screen-menu {
+        margin-top: 2rem;
+    }
+
+    .small-screen-menu p {
+        margin-bottom: 1rem;
+    }
+
+    .small-screen-menu p:hover {
+        font-weight: 700;
+    }
+
+    .small-screen-social-wrap {
+        display: flex;
+        justify-content: center;
+        padding: 5rem 0 2.5rem 0;
+    }
 }
